--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ node_modules/*
 ## Build generated
 build/
 DerivedData/
-
+UserInterfaceState.xcuserstate
 ## Various settings
 *.pbxuser
 !default.pbxuser
@@ -17,7 +17,7 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-xcuserdata/
+*/xcuserdata/*
 UserInterfaceState.xcuserstate
 UserInterfaceState.*
 */lotco.xcuserdatad/*
